# HSA-PyElastica

./: .gitignore  Makefile  README.md  pyproject.toml
examples/hsa_robot/: actuation_utils.py  generate_actuation_specs.py  generate_steady_state_dataset.py  motion_primitives.py  motion_primitives_postprocessing.py
examples/hsa_rod/: hsa_rod_bending.py  hsa_rod_elongation.py
examples/hsa_rod/verification_sim_against_good_et_al/: hsa_rod_steady_state_characterisation.py  plot_verification_sim_against_good_et_al.py
examples/hsa_rod/verification_sim_against_good_et_al/simulated_data/: HSA_ROD_FPU50_CLOSED_10ROWS.pickle  HSA_ROD_FPU50_CLOSED_12ROWS.pickle  HSA_ROD_FPU50_CLOSED_4ROWS.pickle  HSA_ROD_FPU50_CLOSED_6ROWS.pickle  HSA_ROD_FPU50_CLOSED_8ROWS.pickle
examples/parameters/: platform_params.py  robot_params.py  rod_params.py  segment_params.py
examples/visualization/: matplotlib_3d_plot_utils.py
examples/visualization/scene/: __init__.py  matplotlib_scene.py  pyvista_scene.py
hsa_elastica/: __init__.py
hsa_elastica/boundary_conditions/: __init__.py  hsa_motor_controlled_rot_bc.py  hsa_motor_free_rot_bc.py
hsa_elastica/callbacks/: __init__.py  hsa_diagnostic_callbacks.py
hsa_elastica/dissipation/: __init__.py  configurable_analytical_linear_damper.py
hsa_elastica/forcing/: __init__.py  local_endpoint_forces.py  proximal_end_torque.py
hsa_elastica/memory_block/: __init__.py  memory_block_hsa_rod.py
hsa_elastica/modules/: __init__.py  base_system.py  memory_block.py
hsa_elastica/rod/: __init__.py  factory_function.py  hsa_rod.py
hsa_elastica/simulation/: __init__.py  hsa_robot_simulator.py  hsa_rod_simulator.py
hsa_elastica/utils/: __init__.py  data_mapping_utils.py  load_diagnostic_data.py
